(Year/Month/Day)

(2021/7/25)
BodyDef

(2021/7/27)
DamageDef
HediffDef
ThingDef
RecipeDef

(2021/8/4)
HediffDef
RecipeDef

(2021/8/5)
ThingDef

(2021/8/14)
ThingDef

(2021/9/3)
AlienRace.BackstoryDef

(2021/9/6)
HediffDef

(2021/9/8)
StyleItemCategoryDef