@@ -45,4 +45,11 @@
   <Anty_Amigo_B_Commander.title>앤티 지휘관</Anty_Amigo_B_Commander.title>
   <Anty_Amigo_B_Commander.titleShort>지휘관</Anty_Amigo_B_Commander.titleShort>
   <Anty_Amigo_B_Commander.baseDescription>[PAWN_nameDef](은) 지휘관 입니다.\n\n 군체의 병력을 통솔하기 위해서 강력한 페로몬 분비선을 지니고 있는 개체로써 다른 앤티들과는 달리 더 많고 정확한 지시를 내릴 수 있습니다.</Anty_Amigo_B_Commander.baseDescription>
+
+  <AT_DreadnoughtBackStory.title>드레드노트</AT_DreadnoughtBackStory.title>
+  <AT_DreadnoughtBackStory.titleShort>드레드노트</AT_DreadnoughtBackStory.titleShort>
+  <AT_DreadnoughtBackStory.baseDescription>앤티들이 메카노이드를 보고 따라만든 생물병기입니다.\n\n극도로 발달한 군체만이 드레드노트를 가지고 있으며 주로 군체의 최후방 방어선에 배치됩니다.\n\n직사요격 기능을 탑재하고 있는데, 기존의 직사요격과는 달리 안 밖으로 향하는 모든 공격을 차단합니다.\n\n만약 드레드노트들이 최전방에서 보이기 시작했다면, 전쟁놀이는 끝났다는 뜻입니다.</AT_DreadnoughtBackStory.baseDescription>
+  <AT_DreadnoughtBackStory_B.title>드레드노트</AT_DreadnoughtBackStory_B.title>
+  <AT_DreadnoughtBackStory_B.titleShort>드레드노트</AT_DreadnoughtBackStory_B.titleShort>
+  <AT_DreadnoughtBackStory_B.baseDescription>앤티들이 메카노이드를 보고 따라만든 생물병기입니다.\n\n극도로 발달한 군체만이 드레드노트를 가지고 있으며 주로 군체의 최후방 방어선에 배치됩니다.\n\n직사요격 기능을 탑재하고 있는데, 기존의 직사요격과는 달리 안 밖으로 향하는 모든 공격을 차단합니다.\n\n만약 드레드노트들이 최전방에서 보이기 시작했다면, 전쟁놀이는 끝났다는 뜻입니다.</AT_DreadnoughtBackStory_B.baseDescription>
 </LanguageData>
