@@ -4,4 +4,8 @@
   <Anty.description>앤티들은 전장에서 죽어나가는 군인들을 대체하기 위해 개미의 유전자를 이용하여 만들어진 생명체입니다.\n\n프로젝트 초기에 비하면 성공적이라고 방심하던 찰나, 한 관계자의 실수로 실험장에서 풀려나 우주까지 진출하게 되었습니다. \n\n성격 자체는 온화하나, 병기로써 만들어진 탓에 전쟁밖에는 몰라 이 행성 저 행성을 오가며 온통 불바다로 만들어버리고 있습니다. 대부분의 연료는 앤티 자신들이지만요.</Anty.description>
   <Anty.tools.0.label>작은 턱</Anty.tools.0.label>
   <Anty.tools.1.label>큰 턱</Anty.tools.1.label>
+
+  <AT_dreadnought.label>앤티 드레드노트</AT_dreadnought.label>
+  <AT_dreadnought.description>앤티들이 메카노이드를 보고 따라만든 생물병기입니다.\n\n극도로 발달한 군체만이 드레드노트를 가지고 있으며 주로 군체의 최후방 방어선에 배치됩니다.\n\n직사요격 기능을 탑재하고 있는데, 기존의 직사요격과는 달리 안 밖으로 향하는 모든 공격을 차단합니다.\n\n만약 드레드노트들이 최전방에서 보이기 시작했다면, 전쟁놀이는 끝났다는 뜻입니다.</AT_dreadnought.description>
+  <AT_dreadnought.tools.0.label>큰 턱</AT_dreadnought.tools.0.label>
 </LanguageData>
