@@ -27,3 +27,7 @@ HediffDef
 
 (2021/9/8)
 StyleItemCategoryDef
+
+(2021/10/5)
+AlienRace.BackstoryDef
+AlienRace.ThingDef_AlienRace
